docs: list, show, update
